# demo

demo_cpp/: .gitignore  CMakeLists.txt
demo_cpp/config/: config.json
demo_cpp/src/: CApplication.cpp  CApplication.h  CDemoTest.cpp  CDemoTest.h  CLogInit.cpp  CLogInit.h  CNetworkEngine.cpp  CNetworkEngine.h  main.cpp
demo_docker/centos/: Dockerfile  Dockerfile_1  deploy.bat  deploy_compose.yml  env.bat  env_compose.yml
demo_docker/mysql/: mysql.bat  mysql_compose.yml
demo_docker/redis/: redis-singleton.conf  redis.env  redis_compose_singleton.yml  redis_singleton.bat
demo_docker/redis/config/: redis-cluster.conf  redis-sentinel.conf  redis-server.conf  redis.env
demo_docker/redis/redis_cluster/: redis_cluster.bat  redis_cluster.sh  redis_cluster_deploy.sh  redis_compose_cluster.yml
demo_docker/redis/redis_sentinel/: redis-sentinel-3.conf  redis-sentinel.conf  redis_compose_sentinel.yml  redis_sentinel.bat  redis_sentinel.sh
demo_docker/redis/redis_sentinel/config/: redis-sentinel.conf  redis.env
demo_docker/redis/redis_sentinel/config/sentinel_1/: redis-sentinel.conf
demo_docker/redis/redis_sentinel/config/sentinel_2/: redis-sentinel.conf
demo_docker/redis/redis_sentinel/config/sentinel_3/: redis-sentinel.conf
demo_docker/redis/redis_server/: redis-master.conf  redis-slave-1.conf  redis_compose_server.yml  redis_compose_server_only.yml  redis_server.bat  redis_server.sh  redis_server_only.bat  redis_server_only.sh
demo_docker/redis/redis_server/config/: redis-server.conf
demo_docker/redis/redis_server/config/sentinel_1/: redis-sentinel.conf
demo_docker/redis/redis_server/config/sentinel_2/: redis-sentinel.conf
demo_docker/redis/redis_server/config/sentinel_3/: redis-sentinel.conf
demo_docker/redis/redis_server/config/server_3/: redis-server.conf
demo_docker/redis/redis_singleton/: .env  redis_compose_singleton.yml  redis_singleton.bat  redis_singleton.sh
demo_log4rs/: .gitignore  Cargo.toml
demo_log4rs/config/: log4rs.yml
demo_log4rs/src/: main.rs
