[package]
name = "demo_log4rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
diesel = "2.0.3"
itoa = "1.0.5"
log = "0.4.17"
log4rs = "1.2.0"
mio = "0.8.6"
rand = "0.8.5"
redis = "0.22.3"
ryu = "1.0.12"
